[project]
name = "simple-raft"
version = "1.0.0"
description = "A simple Raft consensus algorithm implementation."
authors = [{ name = "kapkekes", email = "kapkekes@yandex.ru"}]
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.4",
]

[project.optional-dependencies]
http-transport = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
]
app = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
raft-node = "raft.extras.app.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raft"]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]
